--- a/docs/src/cfe_time.dox
+++ b/docs/src/cfe_time.dox
@@ -127,7 +127,7 @@
   structure is used by TIME to store current time, time at the tone, time since the
   tone, the MET, the STCF and command arguments for time adjustments.  Note that typically
   the 32 bits of seconds and the upper 16 bits of subseconds are used for time stamping
-  Software bus messages, but this is dependent on the underlying defintion.
+  Software bus messages, but this is dependent on the underlying definition.
 
   The system time structure is defined as follows:
 
@@ -674,7 +674,7 @@
 /**
   \page cfetimeugnormal Normal Operation
 
-  The following sections describe the operator's resposibilities for maintaining
+  The following sections describe the operator's responsibilities for maintaining
   time under nominal conditions: <BR>
 
   <UL>
@@ -757,7 +757,7 @@
   \page cfetimeugadjust Adjusting Time
 
   The TIME Server includes commands to set the STCF, Leap Seconds,
-  and Validity state. The STCF should be set implicity using the
+  and Validity state. The STCF should be set implicitly using the
   #CFE_TIME_SET_TIME_CC or explicitly using #CFE_TIME_SET_STCF_CC.
   TIME provides the ability to command a one time adjustment
   (#CFE_TIME_ADD_ADJUST_CC and #CFE_TIME_SUB_ADJUST_CC)
