Fix #2055, Refactor doxygen mainpage into frontpage

--- a/docs/src/cfe_frontpage.dox
+++ b/docs/src/cfe_frontpage.dox
@@ -1,5 +1,5 @@
 /**
-  \mainpage Core Flight Executive Documentation
+  \page cfefrontpage Core Flight Executive Documentation
 
   <UL>
     <LI> General Information and Concepts
