--- a/docs/src/cfe_evs.dox
+++ b/docs/src/cfe_evs.dox
@@ -492,7 +492,7 @@
 **  message length embedded within the header (from `CFE_MSG_GetSize()`) matches the expected
 **  length of that message, based on the size of the C structure defining that command.
 **  If there is any discrepancy between the expected and actual message size, EVS will generate
-**  the #CFE_EVS_LEN_ERR_EID event, increment the command error counter (\EVS_CMDEC), and the
+**  the #CFE_EVS_CMD_LEN_ERR_EID event, increment the command error counter (\EVS_CMDEC), and the
 **  command will _not_ be accepted for processing.
 **
 **  The following is a list of commands that are processed by the cFE Event Services Task.
