--- a/docs/src/cfe_time.dox
+++ b/docs/src/cfe_time.dox
@@ -706,7 +706,7 @@
 **  message length embedded within the header (from `CFE_MSG_GetSize()`) matches the expected
 **  length of that message, based on the size of the C structure defining that command.
 **  If there is any discrepancy between the expected and actual message size, TIME will generate
-**  the #CFE_TIME_LEN_ERR_EID event, increment the command error counter (\TIME_CMDEC), and the
+**  the #CFE_TIME_CMD_LEN_ERR_EID event, increment the command error counter (\TIME_CMDEC), and the
 **  command will _not_ be accepted for processing.
 **
 **  The following is a list of commands that are processed by the cFE Time Services Task.
